tests/spec/non_conformant/errors/fn_error/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-error"
#[allow(unused)]
use super::rsass;

// From "sass-spec/spec/non_conformant/errors/fn-error/property.hrx"

// Ignoring "property", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/fn-error/ruleset.hrx"

// Ignoring "ruleset", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/fn-error/simple.hrx"

// Ignoring "simple", error tests are not supported yet.
